Fixed the description alignment

--- a/styles/SimStyle.css
+++ b/styles/SimStyle.css
@@ -276,7 +276,7 @@ a{
 
 
 .project-description-container{
-	padding-left: 12px;
+	padding-left: 3%;
 }
 
 .creative-grid-item{
